# aliyun-dev-server-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/aliyun_dev_server_cli/: __init__.py  aliyun.py  debug.py  engine.py  servers.py  settings.py  spot_servers.py  types.py
tests/: test_settings_validation.py
