[project]
name = "aliyun-dev-server-cli"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "nysparia", email = "nysparia@pm.me" }]
dependencies = [
    "alibabacloud-ecs20140526==7.2.*",
    "pydantic==2.*",
    "pydantic-settings==2.*",
    "structlog==25.*",
    "colorama==0.4.6",
    "rich==14.*",
    "aiodns==3.*",
    "inquirer>=3.4.1",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "ipython>=9.7.0",
]
